# labelstudio_bbox_tools

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: local.example.yaml  rtx4090.example.yaml
docs/: coco-dataset-pack-guide.md  editable-install-guide.md  env-guide.md  notebook-workflow-guide.md  path-and-mount-guide.md  pose-video-inference-guide.md  remote-setup-guide.md  video-frame-extraction-guide.md  video-inference-visualization-guide.md  workflow-bbox-basic.md  workflow-labelstudio-advanced.md
examples/notebooks/dataset_tools/: 01_coco_pack_images_labels.ipynb
examples/notebooks/labelstudio/: 00_ls_check_environment.ipynb  01_ls_import_images.ipynb  02_ls_apply_bbox_ui_from_mmyolo.ipynb  03_ls_export_mmyolo.ipynb  04_2_ls_pseudo_label_rfdetr.ipynb  04_ls_pseudo_label_yolo.ipynb  05_ls_merge_ann_pred.ipynb  06_ls_import_annotations_mmyolo.ipynb  07_ls_extract_video_frames.ipynb  99_ls_delete_project_safe.ipynb
examples/notebooks/pose_inference/: 01_yolo11_pose_video_visualize.ipynb  02_rfdetr_pose_video_visualize.ipynb  03_compare_pose_videos.ipynb  (+3 more)
examples/scripts/: 01_import_images_dry_run.sh  02_apply_bbox_ui_dry_run.sh  03_export_mmyolo_example.sh  04_2_pseudo_label_rfdetr_dry_run.sh  04_pseudo_label_yolo_dry_run.sh  05_merge_ann_pred_dry_run.sh  06_import_annotations_dry_run.sh  07_extract_video_frames_dry_run.sh  08_video_infer_yolo11_dry_run.sh  09_video_infer_rfdetr_dry_run.sh  10_video_compare_dry_run.sh  11_pose_infer_yolo11_dry_run.sh  12_pose_infer_rfdetr_dry_run.sh  13_pose_compare_dry_run.sh  99_delete_project_preview.sh
src/labelstudio_bbox_tools/: __init__.py  config.py  ls_api.py  ls_client.py  paths.py
tests/: test_class_sources.py  test_dataset_pack.py  test_label_config.py  test_merge_rules.py  test_pose_inference.py  test_project_export.py  test_pseudo_label.py  test_rfdetr_pseudo_label.py  test_video_frame_extract.py  test_video_inference.py
(+37 files in other folders)
