[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labelstudio-bbox-tools"
version = "0.1.0"
description = "Utilities for Label Studio bbox image import, label config setup, and dataset export."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "label-studio-sdk>=1.0,<2",
  "Pillow>=9",
  "requests>=2",
  "tqdm>=4",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
lsbbox-import-images = "labelstudio_bbox_tools.importers.image_import:main"
lsbbox-apply-ui = "labelstudio_bbox_tools.ui.label_config:main"
lsbbox-export = "labelstudio_bbox_tools.exporters.project_export:main"

[tool.setuptools.packages.find]
where = ["src"]

